# SPDX-License-Identifier: MIT OR Apache-2.0
[package]
name = "ironcache-raft"
description = "Hand-rolled, Env-respecting Raft control plane (ADR-0027, CONTROL_PLANE.md #73): a pure step engine, transport-agnostic, verified in the ironcache-sim DST harness."
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
ironcache-env = { workspace = true }

[dev-dependencies]
ironcache-sim = { workspace = true }
ironcache-env = { workspace = true }
