# SPDX-License-Identifier: MIT OR Apache-2.0
[package]
name = "ironcache-runtime"
description = "Swappable Runtime trait seam (RUNTIME_ABSTRACTION.md) and a shared-nothing tokio current-thread, per-core-pinned bootstrap (ADR-0002)."
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[lints]
workspace = true

[features]
# The tokio+epoll/kqueue backend is the default and the portable, cross-platform
# release target (RUNTIME_ABSTRACTION.md). `tls` (default ON) adds the embedded
# rustls CLIENT-listener stream variant (#105, docs/design/TLS.md); it layers on
# the tokio backend so it implies `tokio`. With `tls` OFF the crate compiles with
# NO rustls dep and exposes only the plaintext path (byte-unchanged).
#
# `io_uring` (default OFF, PROD-10 / #28, docs/design/IOURING_DATAPATH.md) adds an
# ADDITIVE, OPT-IN Linux io_uring backend ([`io_uring_rt::IoUringRuntime`]) that
# satisfies the SAME `Runtime` trait. It is gated `#[cfg(all(target_os = "linux",
# feature = "io_uring"))]`, so the feature is INERT on macOS/Windows/BSD (the dep
# still resolves there but the code is cfg'd out and the tokio backend runs). The
# tokio backend stays the default + the non-Linux fallback + the fallback when the
# feature is off; turning `io_uring` ON does NOT remove tokio (it is still the
# fallback for TLS and for hosts whose kernel lacks io_uring). The low-level binding
# is the pure-Rust `tokio-uring` (over `io-uring`), so the static-musl build needs
# no liburing / C system library (the dep is opt-in and never enters the default
# build).
default = ["tokio", "tls"]
tokio = ["dep:tokio", "dep:socket2"]
tls = ["tokio", "dep:tokio-rustls", "dep:rustls-pki-types", "dep:arc-swap"]
io_uring = ["tokio", "dep:tokio-uring", "dep:io-uring"]

[dependencies]
ironcache-env = { workspace = true }
tokio = { workspace = true, optional = true, features = [
    "rt",
    "net",
    "io-util",
    "time",
    "macros",
    "sync",
] }
socket2 = { workspace = true, optional = true }
# Embedded transport TLS for the CLIENT listener (#105, docs/design/TLS.md), behind the
# `tls` feature. tokio-rustls drives the rustls handshake over the accepted TcpStream; the
# `ring` provider is pinned at the workspace level for a reproducible musl/aarch64 static
# cross-build (no aws-lc-rs/cmake, no system OpenSSL). rustls-pki-types' `PemObject` trait parses
# the configured cert/key PEM (the maintained successor to the archived rustls-pemfile). Both
# OPTIONAL: the plaintext build pulls neither.
tokio-rustls = { workspace = true, optional = true }
rustls-pki-types = { workspace = true, optional = true }
# Lock-free atomic Arc publish holding the CURRENT client-listener rustls `ServerConfig`, so a
# SIGHUP-triggered hot cert reload (#563, `ReloadableAcceptor`) can atomically swap in a freshly
# parsed config that the NEXT handshake reads while in-flight connections keep theirs. Behind the
# `tls` feature (never pulled by the plaintext build); pure-Rust with no transitive deps, so the
# static musl/aarch64 build is undisturbed.
arc-swap = { workspace = true, optional = true }
# The OPT-IN Linux io_uring backend (PROD-10 / #28), behind the default-OFF `io_uring`
# feature. `tokio-uring` provides a per-thread, current-thread io_uring runtime (one ring
# per shard thread, matching the shared-nothing thread-per-core model ADR-0002) plus an
# owned-buffer `TcpStream` (its `read`/`write` take and RETURN the owned buffer, the exact
# owned-buffer model the `Runtime` seam was shaped for, RUNTIME_ABSTRACTION.md). It pulls the
# pure-Rust `io-uring` syscall bindings (NO liburing / C dependency), so the static-musl
# default build is unaffected (this dep is opt-in and Linux-only at the cfg layer). Target-gated
# to Linux so the dependency tree on macOS/Windows does not try to compile the Linux-only crate.
[target.'cfg(target_os = "linux")'.dependencies]
tokio-uring = { workspace = true, optional = true }
# Raw io_uring bindings for the startup capability probe (see the `io_uring` feature note above +
# `uring_probe`). Linux + opt-in only; already in the tree via tokio-uring.
io-uring = { workspace = true, optional = true }
# The `sched_setaffinity`/`sched_getaffinity` bindings for the persist-thread CPU pin (#589,
# `affinity`). Linux-ONLY (CPU affinity is a Linux scheduling primitive), so the dep is target-gated
# and the module's non-Linux path is a pure no-op that never references libc. NOT optional: the
# affinity module is always compiled (the pin is a runtime primitive, not behind a Cargo feature).
# libc is already a workspace dep pinned at the root (MIT/Apache, cargo-deny clean, static-musl safe).
libc = { workspace = true }

# `test-util` enables tokio's PAUSED-clock test harness (`start_paused`), used to fire the bounded
# secret-handshake timeout near-instantly in the slow-loris test without a real 10s wall-clock wait.
# A DEV-only dependency: it never enters the shipped static binary.
[dev-dependencies]
tokio = { workspace = true, features = [
    "rt",
    "net",
    "io-util",
    "time",
    "macros",
    "sync",
    "test-util",
] }
