# SPDX-License-Identifier: MIT OR Apache-2.0
[package]
name = "ironcache-server"
description = "Per-connection state machine and Tier-0 command dispatch (COMMANDS.md, CONNECTION_LIFECYCLE.md, PROTOCOL.md)."
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
ironcache-env = { workspace = true }
ironcache-protocol = { workspace = true }
ironcache-observe = { workspace = true }
ironcache-config = { workspace = true }
# The storage WAIST only (not ironcache-store): the command layer names the four
# primitives + the hook types, never the concrete map. This dependency edge is the
# compile-time proof of the layering contract (STORAGE_API.md).
ironcache-storage = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
# The concrete store is a TEST-ONLY dependency here: the dispatch tests and the
# end-to-end harness need a real Store to drive the generic dispatch, but the
# library code depends only on the waist (above).
ironcache-store = { workspace = true }
ironcache-runtime = { workspace = true }
tokio = { workspace = true, features = ["rt", "net", "io-util", "time", "macros", "sync"] }
