# SPDX-License-Identifier: MIT OR Apache-2.0
[package]
name = "ironcache-server"
description = "Per-connection state machine and Tier-0 command dispatch (COMMANDS.md, CONNECTION_LIFECYCLE.md, PROTOCOL.md)."
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
ironcache-env = { workspace = true }
ironcache-protocol = { workspace = true }
ironcache-observe = { workspace = true }
ironcache-config = { workspace = true }
# The static slot-ownership map (CLUSTER_CONTRACT.md #70, slice 2). The CLUSTER projection
# (cmd_cluster) reads it via ServerContext.cluster to render the real multi-node SLOTS /
# SHARDS / NODES / INFO. Leaf crate (only ironcache-protocol), so no cycle.
ironcache-cluster = { workspace = true }
# The Raft control-plane HANDLE (HA-4c). ServerContext carries an Optional `RaftHandle` so a
# raft-mode CLUSTER mutator proposes a ConfigCmd through the log instead of mutating the local
# map directly. Only the clonable `Send` handle (the inbox sender + status watch) is named here;
# this crate does NOT drive the engine. raft-net does not depend on ironcache-server, so the
# edge is acyclic (and the layering test still forbids only the concrete store).
ironcache-raft-net = { workspace = true }
# The replication STATUS types (HA-7e): ServerContext carries an Optional node-level
# `Arc<ReplNodeStatus>` so the INFO `# Replication` section and CLUSTER SHARDS render the
# real role / offset / lag / link state the repl tasks publish. Only the PURE status + lag
# types (ReplNodeStatus / ReplStatusSnapshot / ReplicaLag / replica_is_in_sync) are named
# here; this crate does NOT drive the replication transport. ironcache-repl does not depend
# on ironcache-server, so the edge is acyclic; and the status types expose no concrete store
# (the layering contract still forbids only a DIRECT ironcache-store edge, asserted below).
ironcache-repl = { workspace = true }
# The storage WAIST only (not ironcache-store): the command layer names the four
# primitives + the hook types, never the concrete map. This dependency edge is the
# compile-time proof of the layering contract (STORAGE_API.md).
ironcache-storage = { workspace = true }
# The per-shard TTL timing wheel (#51). It names only the storage waist's UnixMillis
# basis (no concrete store type), so the command layer can register deadlines after a
# TTL-setting command without reaching past the waist. The lazy backstop in the store
# remains the correctness guarantee; the wheel is the active-reclamation optimization.
ironcache-expiry = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
# The concrete store is a TEST-ONLY dependency here: the dispatch tests and the
# end-to-end harness need a real Store to drive the generic dispatch, but the
# library code depends only on the waist (above).
ironcache-store = { workspace = true }
# The concrete eviction policy is TEST-ONLY here too: the dispatch admission tests
# wire a real `Policy` (cache mode / noeviction) into the store to exercise the
# evict-to-fit / -OOM gate. The library names only the `Admit` waist trait (above).
ironcache-eviction = { workspace = true }
ironcache-runtime = { workspace = true }
tokio = { workspace = true, features = ["rt", "net", "io-util", "time", "macros", "sync"] }
# Parse this crate's own Cargo.toml in the layering contract test (a form
# -independent dependency-table walk, so a dotted-table
# `[dependencies.ironcache-store]` cannot slip past the guard).
toml = { workspace = true }

# The end-to-end test installs jemalloc as its own `#[global_allocator]` so the INFO
# `used_memory` figure (process-global stats.allocated) is live over a real socket,
# mirroring the server binary. Dev-only, non-MSVC (where jemalloc is unavailable).
[target.'cfg(not(target_env = "msvc"))'.dev-dependencies]
tikv-jemallocator = { workspace = true }
