# SPDX-License-Identifier: MIT OR Apache-2.0
[package]
name = "ironcache-store"
description = "The concrete per-shard store: per-DB hashbrown SwissTable of kvobj entries, implementing the ironcache-storage narrow waist (HASHTABLE.md #35, OBJECT_LAYOUT.md #111, ADR-0005)."
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
# The frozen waist this crate implements.
ironcache-storage = { workspace = true }
# The collection encoding thresholds (PR-5: list-max-listpack-size byte budget +
# element cap). The store reads these DEFAULTS to decide the listpack->quicklist
# transition; config is a leaf crate (serde/toml only), so this edge introduces no
# cycle. The runtime-settable form is a follow-up; the defaults live in config so
# CONFIG GET can echo the recognized parameter (registry entry).
ironcache-config = { workspace = true }
# The pluggable eviction policies (EVICTION.md #48, ADR-0008). The store's
# `evict_to_fit` + the policy-query accessors (policy_name/evicts/volatile_only)
# name the EvictionPolicy trait; the binary wires a concrete `Policy` as the store's
# E hook. The store still implements the waist generically over `E: EvictionHook`, so
# this edge is the concrete-policy wiring, not a change to the frozen waist.
ironcache-eviction = { workspace = true }
# Bytes for value buffers (matches the waist's borrow/write byte type).
bytes = { workspace = true }
# The per-shard SwissTable (ADR-0005: stock hashbrown, unsynchronized, owned by
# one core). Its default hasher is fine for PR-2a; the inline-tag/seeded-hash
# tuning is a #8 follow-up.
hashbrown = { workspace = true }

# jemalloc mallctl introspection for the PROCESS-GLOBAL used_memory figure
# (ADR-0006: epoch + stats.allocated/stats.resident). The `stats` API is SAFE (no
# unsafe needed, so this crate keeps `#![forbid(unsafe_code)]`). Gated to the
# targets where jemalloc is the global allocator (every target except MSVC, which
# falls back to the system allocator per the binary's `#[global_allocator]` cfg);
# on MSVC the process_*_bytes readers return 0 (no jemalloc to query).
[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemalloc-ctl = { workspace = true }

# The accounting smoke test installs jemalloc as ITS OWN `#[global_allocator]` (the
# library and the workspace test harness do not set one), so the process-global
# mallctl figures reflect real allocations. Dev-only, non-MSVC (where jemalloc is
# unavailable and process_*_bytes returns 0).
[target.'cfg(not(target_env = "msvc"))'.dev-dependencies]
tikv-jemallocator = { workspace = true }

# The eviction integration test (tests/eviction.rs) drives the store with the real
# concrete `Policy` (S3-FIFO/Random/NoEviction). The library already depends on
# ironcache-eviction for the EvictionPolicy trait; this restates it for the test
# target so the test can name the concrete policy types.
[dev-dependencies]
ironcache-eviction = { workspace = true }
# The COW/MVCC de-risking micro-bench (benches/cow_arc.rs, #576 PR-1c) times its
# supplementary p50/p99/p99.9 tail through the sanctioned monotonic clock seam (never a
# raw Instant), so the determinism invariant lint stays green. Dev/bench-only; a leaf
# crate, so this introduces no cycle.
ironcache-env = { workspace = true }
# Criterion for the COW micro-bench mean/median A/B. default-features = false drops
# html_reports (plotters) and rayon to keep the dependency tree and cargo-deny clean
# (mirrors ironcache-bench); only the cargo_bench_support harness shim is enabled.
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

# The COW/MVCC de-risking micro-bench (#576 PR-1c): isolates the hot-path cost of the
# per-slot Arc wrapper (GET deref/get_mut, SET saving-flag check, during-save COW clone)
# so the per-slot-Arc-COW approach can be gated before the full build. Criterion supplies
# its own timing harness, so `harness = false`.
[[bench]]
name = "cow_arc"
harness = false
