# SPDX-License-Identifier: MIT OR Apache-2.0
[package]
name = "ironcache"
description = "IronCache: the most efficient Redis-compatible cache, in one static Rust binary. (server | cli | bench | check | config | upgrade)"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false
# Emits `rerun-if-env-changed=IRONCACHE_BUILD_VERSION` so the compile-time
# version stamp (cli::BUILD_VERSION) is re-read when the rolling-release workflow
# changes it; see build.rs.
build = "build.rs"

[[bin]]
name = "ironcache"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
ironcache-env = { workspace = true }
ironcache-protocol = { workspace = true }
ironcache-runtime = { workspace = true }
ironcache-config = { workspace = true }
ironcache-observe = { workspace = true }
# The binary depends on BOTH the waist (the trait/types) and the concrete store
# (to construct the per-shard ShardStore it hands to dispatch). The server library
# depends only on the waist; the binary is where the concrete impl is wired in.
ironcache-storage = { workspace = true }
ironcache-store = { workspace = true }
# The concrete eviction policy: the binary constructs the configured `Policy`
# (S3-FIFO/Random/NoEviction via map_policy_name) and wires it into the per-shard
# store as the E hook. The library names only the EvictionPolicy/Admit traits.
ironcache-eviction = { workspace = true }
ironcache-server = { workspace = true }
# The static slot-ownership map (CLUSTER_CONTRACT.md #70, slice 2). The binary builds the
# `SlotMap` once at boot from the resolved topology and threads it (Arc) into every shard's
# ServerContext; the serve-layer router reads it to decide MOVED / CROSSSLOT redirection. It
# is a leaf (only ironcache-protocol), so it adds no third-party deps.
ironcache-cluster = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true, features = ["rt", "net", "io-util", "time", "macros", "sync", "signal"] }
libc = { workspace = true }

# jemalloc is the default allocator (ADR-0006, jemalloc 5.3.x). Not available on
# MSVC Windows; gate it so the workspace still builds there (the static release
# targets are musl/macos, where it is available). The background-purge thread,
# stats, and profiling features are enabled per ADR-0006; tikv-jemalloc-ctl gives
# the PR-3 epoch + stats.allocated accounting path a place to compile against.
[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { workspace = true }
tikv-jemalloc-ctl = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "net", "io-util", "time", "macros", "sync"] }
# The inter-node transport (HA-1): the ha_transport integration test drives a real
# node-to-node connection over the Runtime seam against two in-process nodes.
ironcache-clusterbus = { workspace = true }
