# SPDX-License-Identifier: MIT OR Apache-2.0
[package]
name = "ironcache"
description = "IronCache: the most efficient Redis-compatible cache, in one static Rust binary. (server | cli | bench | check | config | upgrade)"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false
# Emits `rerun-if-env-changed=IRONCACHE_BUILD_VERSION` so the compile-time
# version stamp (cli::BUILD_VERSION) is re-read when the rolling-release workflow
# changes it; see build.rs.
build = "build.rs"

[[bin]]
name = "ironcache"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
ironcache-env = { workspace = true }
ironcache-protocol = { workspace = true }
ironcache-runtime = { workspace = true }
ironcache-config = { workspace = true }
ironcache-observe = { workspace = true }
# The binary depends on BOTH the waist (the trait/types) and the concrete store
# (to construct the per-shard ShardStore it hands to dispatch). The server library
# depends only on the waist; the binary is where the concrete impl is wired in.
ironcache-storage = { workspace = true }
ironcache-store = { workspace = true }
# The concrete eviction policy: the binary constructs the configured `Policy`
# (S3-FIFO/Random/NoEviction via map_policy_name) and wires it into the per-shard
# store as the E hook. The library names only the EvictionPolicy/Admit traits.
ironcache-eviction = { workspace = true }
ironcache-server = { workspace = true }
# The static slot-ownership map (CLUSTER_CONTRACT.md #70, slice 2). The binary builds the
# `SlotMap` once at boot from the resolved topology and threads it (Arc) into every shard's
# ServerContext; the serve-layer router reads it to decide MOVED / CROSSSLOT redirection. It
# is a leaf (only ironcache-protocol), so it adds no third-party deps.
ironcache-cluster = { workspace = true }
# The Raft control plane (HA-4c). In raft-governance mode (`cluster_mode = raft`, opt-in) the
# binary builds a shared Arc<SlotMap>, a ConfigSm over it, and spawns the RaftClusterBusNode
# control-plane task on a dedicated thread; the RaftHandle goes into ServerContext so a CLUSTER
# mutator proposes through the log. `ironcache-raft` supplies the engine + ConfigCmd/RaftConfig
# types the boot wiring names; `ironcache-raft-net` the adapter + FileStorage + ConfigSm + handle.
ironcache-raft = { workspace = true }
ironcache-raft-net = { workspace = true }
# The replication data plane (HA-7). In raft-governance mode a node that becomes a committed
# REPLICA of some slots attaches its shard to the slot OWNER's primary: it installs a
# ReplObserver on its store + serves replica connections (the primary side), and dials the
# owner to full-sync + tail (the replica side). The DEFAULT static path never reaches this
# module, so the dependency adds no cost there. Mirrors the `ironcache-cluster` leaf line.
ironcache-repl = { workspace = true }
# The inter-node transport (HA-1). A raft-mode `CLUSTER MEET <host> <port>` LEARNS the MEET'd
# peer's REAL announce id by dialing the peer's RESP client port and reading `CLUSTER MYID`
# over a `PeerConn` (item-7 id-reconciliation), so the committed node table coincides with the
# peer's self-added announce entry (no synth/announce duplicate). The DEFAULT static path never
# reaches this, so it adds no cost there. A leaf on the Runtime seam (no extra third-party deps).
ironcache-clusterbus = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true, features = ["rt", "net", "io-util", "time", "macros", "sync", "signal"] }
libc = { workspace = true }

# jemalloc is the default allocator (ADR-0006, jemalloc 5.3.x). Not available on
# MSVC Windows; gate it so the workspace still builds there (the static release
# targets are musl/macos, where it is available). The background-purge thread,
# stats, and profiling features are enabled per ADR-0006; tikv-jemalloc-ctl gives
# the PR-3 epoch + stats.allocated accounting path a place to compile against.
[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { workspace = true }
tikv-jemalloc-ctl = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "net", "io-util", "time", "macros", "sync"] }
# NOTE: `ironcache-clusterbus` is now a NORMAL dependency (above): the raft-mode MEET path uses
# its `peer_node_id` to learn a MEET'd peer's real announce id. The `ha_transport` integration
# test that drives a node-to-node connection over the Runtime seam still sees it through that.
